--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
-sonar.login=admin
-sonar.password=admin
-sonar.host.url=ehttp://ec2-35-82-120-96.us-west-2.compute.amazonaws.com:9000/
+sonar.login=jira@devopseasylearning.com
+sonar.password=student@
+sonar.host.url=http://sonarqube.ektechsoftwaresolution.com/
 sonar.projectKey=maven-project
-sonar.projectName=maven-project
+sonar.projectName=achille-project
 sonar.projectVersion=1.0
 sonar.sources=.
 sonar.language=java
